[package]
name = "twitter-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
dotenv = "0.15.0"
envy = "0.4.2"
serde = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
twitter-v2 = "0.1.8"
